--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "leaflet": "^1.9.4",
     "node-sass": "^8.0.0",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.4.0",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass-loader": "^13.2.2",
